[gd_scene load_steps=12 format=2]

[ext_resource path="res://theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/Main/MainWindow.gd" type="Script" id=2]
[ext_resource path="res://scenes/Home.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Calendar.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Tasks.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Graph.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/Main/Buttons.gd" type="Script" id=7]
[ext_resource path="res://assets/home.png" type="Texture" id=8]
[ext_resource path="res://assets/calendar.png" type="Texture" id=9]
[ext_resource path="res://assets/graph.png" type="Texture" id=10]
[ext_resource path="res://assets/list.png" type="Texture" id=11]

[node name="Main" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1073.0
margin_bottom = 2333.0

[node name="MainWindow" type="Control" parent="VBoxContainer"]
margin_right = 1066.0
margin_bottom = 2110.0
size_flags_vertical = 3
script = ExtResource( 2 )

[node name="Windows" type="HBoxContainer" parent="VBoxContainer/MainWindow"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 3198.0

[node name="Home" parent="VBoxContainer/MainWindow/Windows" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1063.0
margin_bottom = 2110.0
size_flags_horizontal = 3

[node name="Calendar" parent="VBoxContainer/MainWindow/Windows" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1067.0
margin_right = 2130.0
margin_bottom = 2110.0
size_flags_horizontal = 3

[node name="Graph" parent="VBoxContainer/MainWindow/Windows" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 2134.0
margin_right = 3197.0
margin_bottom = 2110.0
size_flags_horizontal = 3

[node name="Tasks" parent="VBoxContainer/MainWindow/Windows" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 3201.0
margin_right = 4264.0
margin_bottom = 2110.0
size_flags_horizontal = 3

[node name="Tween" type="Tween" parent="VBoxContainer/MainWindow"]

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 2114.0
margin_right = 1066.0
margin_bottom = 2326.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1
script = ExtResource( 7 )

[node name="HomeButton" type="TextureButton" parent="VBoxContainer/Buttons"]
margin_right = 263.0
margin_bottom = 212.0
size_flags_horizontal = 3
toggle_mode = true
texture_normal = ExtResource( 8 )
expand = true
stretch_mode = 5

[node name="CalendarButton" type="TextureButton" parent="VBoxContainer/Buttons"]
margin_left = 267.0
margin_right = 531.0
margin_bottom = 212.0
size_flags_horizontal = 3
toggle_mode = true
texture_normal = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="GraphButton" type="TextureButton" parent="VBoxContainer/Buttons"]
margin_left = 535.0
margin_right = 798.0
margin_bottom = 212.0
size_flags_horizontal = 3
toggle_mode = true
texture_normal = ExtResource( 10 )
expand = true
stretch_mode = 5

[node name="TasksButton" type="TextureButton" parent="VBoxContainer/Buttons"]
margin_left = 802.0
margin_right = 1066.0
margin_bottom = 212.0
size_flags_horizontal = 3
toggle_mode = true
texture_normal = ExtResource( 11 )
expand = true
stretch_mode = 5

[connection signal="resized" from="VBoxContainer/MainWindow" to="VBoxContainer/MainWindow" method="reset_window_container"]
[connection signal="pressed" from="VBoxContainer/Buttons/HomeButton" to="VBoxContainer/MainWindow" method="_on_HomeButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/CalendarButton" to="VBoxContainer/MainWindow" method="_on_CalendarButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/GraphButton" to="VBoxContainer/MainWindow" method="_on_GraphButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/TasksButton" to="VBoxContainer/MainWindow" method="_on_TasksButton_pressed"]
